--- a/index.html
+++ b/index.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HTML el futuro</title>
 </head>
 <body>
-    
+    <nav>
+        <h1>barra de navegacion</h1>
+        <p>Es una barra de  menu linda</p>
+    </nav>
+
+    <section>
+        <h1>Esto es una seccion de un documento</h1>
+        <article>
+            <h3>Aqui se puede crear un articulo</h3>
+        </article>
+        <aside>
+            <h3>es una barra lateral</h3>
+        </aside>
+        <footer>
+            <h4>Pie de la pagina</h4>
+        </footer>
+    </section>
 </body>
 </html>
