--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML el futuro</title>
+    <link rel="stylesheet" href="css/masterstyle.css">
 </head>
 <body>
+    <div class="main-container">
     <nav>
         <h1>barra de navegacion</h1>
         <p>Es una barra de  menu linda</p>
@@ -24,5 +26,6 @@
             <h4>Pie de la pagina</h4>
         </footer>
     </section>
+    </div>
 </body>
 </html>
