mi primera animacion

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML el futuro</title>
+    <title>Mi Curriculum</title>
     <link rel="stylesheet" href="css/masterstyle.css">
 </head>
 <body>
@@ -15,6 +15,7 @@
     </nav>
 
     <section>
+        <p></p>
         <h1>Esto es una seccion de un documento</h1>
         <article>
             <h3>Aqui se puede crear un articulo</h3>
