--- a/curriculum.html
+++ b/curriculum.html
@@ -4,9 +4,61 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="curriculum.css">
     <title>Curriculum</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <h1>Mi Curriculum</h1>
+            <a href="index.html"></a>
+        </nav>
+    </header>
+    <aside>
+        <img src="Y.jpeg" alt="">
+        <a href="#Datos personale">Datos personales</a>
+        <a href="#Estudios">Estudios</a>
+        <a href="#Cursos">Cursos</a>
+        <a href="#Hobbies">Hobbies</a>
+        <a href="#Habilidades">Habilidades</a>
+    </aside>
+    <article>
+        <section id="Datos personales">
+            <h2>Datos personales</h2>
+            <p>Nombre: Ugalde Tellez Aaron</p>
+            <p>Edad:17</p>
+            <p>Num SS:84571387436</p>
+            <p>Correo: aaronugaldet@gmail.com</p>
+        </section>
+        <section id="Estudios">
+            <h2>Estudios</h2>
+            <p>Secundaria: Instituto Andersen, Inicio:2016 fin:2019</p>
+            <p>Media Superior: CECyT 9 "Juan de Dios Bátiz" Inicio:2019 Fin:2022</p>
+        </section>
+        <section id="Cursos">
+            <h2>Cursos,Diplomas y Certificaciones</h2>
+            <p>Curso en desarrollo de videojuegos con unity</p>
+            <p>Certificacion en el primer nivel practico y teorico de Musica por Rockshool</p>
+        </section>
+        <section id="Hobbies">
+            <h2>Hobbies</h2>
+            <p>Jugar videojuegos</p>
+            <p>ver series</p> 
+            <p>ver peliculas</p>
+            <p>pelearme con gente en facebook</p>
+            <p>aprender B)</p>
+        </section>
+        <section id="Habilidades">
+            <h2>Habilidades</h2>
+            <p>Logico</p>
+            <p>Matematico</p>
+            <p>Lider</p>
+            <p>Competitivo</p>
+            <p>Creativo</p>
+        </section>
+    </article>
+    <footer>
+        <h2>Fin del Curriculum jaja</h2>
+    </footer>
 </body>
 </html>
