--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <br>
             <a href="hovermenu.html">hovermenu</a>
             <h3>Aqui se puede crear un articulo</h3>
+            <a href="curriculum.html">curriculum</a>
         </article>
         <aside>
             <h3>es una barra lateral</h3>
