--- a/curriculum.html
+++ b/curriculum.html
@@ -4,23 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="curriculum.css">
+    <link rel="stylesheet" href="css/curriculum.css">
     <title>Curriculum</title>
 </head>
 <body>
     <header>
         <nav>
             <h1>Mi Curriculum</h1>
-            <a href="index.html"></a>
+            <a href="index.html">Regresar</a>
         </nav>
     </header>
     <aside>
-        <img src="Y.jpeg" alt="">
-        <a href="#Datos personale">Datos personales</a>
-        <a href="#Estudios">Estudios</a>
-        <a href="#Cursos">Cursos</a>
-        <a href="#Hobbies">Hobbies</a>
-        <a href="#Habilidades">Habilidades</a>
+        <img src="Yo.jpeg" alt="">
+        <ul>
+            <li><a href="#Datos personale">Datos personales</a></li>
+            <li><a href="#Estudios">Estudios</a></li>
+            <li><a href="#Cursos">Cursos</a></li>
+            <li><a href="#Hobbies">Hobbies</a></li>
+            <li><a href="#Habilidades">Habilidades</a></li></li>
+        </ul>
     </aside>
     <article>
         <section id="Datos personales">
