--- a/curriculum.html
+++ b/curriculum.html
@@ -18,10 +18,15 @@
         <img src="Yo.jpeg" alt="">
         <ul>
             <li><a href="#Datos personale">Datos personales</a></li>
+            <br>
             <li><a href="#Estudios">Estudios</a></li>
+            <br>
             <li><a href="#Cursos">Cursos</a></li>
+            <br>
             <li><a href="#Hobbies">Hobbies</a></li>
+            <br>
             <li><a href="#Habilidades">Habilidades</a></li></li>
+            <br><br><br><br><br><br>
         </ul>
     </aside>
     <article>
@@ -41,14 +46,16 @@
             <h2>Cursos,Diplomas y Certificaciones</h2>
             <p>Curso en desarrollo de videojuegos con unity</p>
             <p>Certificacion en el primer nivel practico y teorico de Musica por Rockshool</p>
+            <p>Cinta negra en Taekwondo</p>
+            <p>Certificacion de ingles por Cambridge</p>
         </section>
         <section id="Hobbies">
             <h2>Hobbies</h2>
             <p>Jugar videojuegos</p>
-            <p>ver series</p> 
-            <p>ver peliculas</p>
-            <p>pelearme con gente en facebook</p>
-            <p>aprender B)</p>
+            <p>Ver series</p> 
+            <p>Ver peliculas</p>
+            <p>Pelearme con gente en facebook</p>
+            <p>Aprender B)</p>
         </section>
         <section id="Habilidades">
             <h2>Habilidades</h2>
