--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <a href="hovermenu.html">hovermenu</a>
             <h3>Aqui se puede crear un articulo</h3>
             <a href="curriculum.html">curriculum</a>
+            <a href="coloreshover.html">coloreshover</a>
         </article>
         <aside>
             <h3>es una barra lateral</h3>
