--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
             <a href="hovermenu.html">hovermenu</a>
             <h3>Aqui se puede crear un articulo</h3>
             <a href="curriculum.html">curriculum</a>
-            <a href="coloreshover.html">coloreshover</a>
+            <h3>XD</h3>
+            <a href="coloreshover.html">coloreshov></a>
+            <br>
+            <a href="hobbies.html"></a>
         </article>
         <aside>
             <h3>es una barra lateral</h3>
