--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <h3>XD</h3>
             <a href="coloreshover.html">coloreshov></a>
             <br>
-            <a href="hobbies.html"></a>
+            <a href="hobbies.html">hobbies</a>
         </article>
         <aside>
             <h3>es una barra lateral</h3>
