--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <a href="coloreshover.html">coloreshov></a>
             <br>
             <a href="hobbies.html">hobbies</a>
+            <button id="add">add</button>
         </article>
         <aside>
             <h3>es una barra lateral</h3>
