--- a/problema2.html
+++ b/problema2.html
@@ -27,5 +27,8 @@
         <p>total</p>
         <input type="text" readonly="true" name="total">
     </form>
+    <footer>
+        <a href="index.html">regresar a la principal</a>
+    </footer>
 </body>
 </html>
