--- a/problema3.html
+++ b/problema3.html
@@ -20,5 +20,8 @@
         <p>total a pagar con 15% de descuento</p>
         <input type="text" readonly="true" name="totalCon">
     </form>
+    <footer>
+        <a href="index.html">regresar a la principal</a>
+    </footer>
 </body>
 </html>
