--- a/problema5.html
+++ b/problema5.html
@@ -27,5 +27,8 @@
         <p>Porcentaje de niñas</p>
         <input type="text" name="porcentajeNiñas" readonly="true">
     </form>
+    <footer>
+        <a href="index.html">regresar a la principal</a>
+    </footer>
 </body>
 </html>
