--- a/problema7.html
+++ b/problema7.html
@@ -23,5 +23,8 @@
         <br>
         <input type="text" readonly="true" name="operacion"> 
     </form>
+    <footer>
+        <a href="index.html">regresar a la principal</a>
+    </footer>
 </body>
 </html>
