--- a/problema8.html
+++ b/problema8.html
@@ -25,5 +25,8 @@
         <br>
         <input type="text" readonly="true" name="numerote">
     </form>
+    <footer>
+        <a href="index.html">regresar a la principal</a>
+    </footer>
 </body>
 </html>
