--- a/problema1.html
+++ b/problema1.html
@@ -34,5 +34,8 @@
             </tr>
         </table>
     </form>
+    <footer>
+        <a href="index.html">regresar a la principal</a>
+    </footer>
 </body>
 </html>
