--- a/problema4.html
+++ b/problema4.html
@@ -34,5 +34,8 @@
         <input type="submit" value="enviar datos">
         <input type="reset" value="borrar">
     </form>
+    <footer>
+        <a href="index.html">regresar a la principal</a>
+    </footer>
 </body>
 </html>
