--- a/problema6.html
+++ b/problema6.html
@@ -26,6 +26,9 @@
         <input type="submit" value="enviar datos">
         <br>
         <input type="text" readonly="true" name="años">
-        </form>
+    </form>
+    <footer>
+        <a href="index.html">regresar a la principal</a>
+    </footer>
 </body>
 </html>
