enlace a los problemas

--- a/index.html
+++ b/index.html
@@ -28,10 +28,19 @@
             <a href="hobbies.html">hobbies</a>
             <br>
             <h1>Problemas</h1>
-            <button id="add">add</button>
+            <a href="problema1.html">problema1 </a>
+            <a href="problema2.html">problema2 </a>
+            <a href="problema3.html">problema3 </a>
+            <a href="problema4.html">problema4 </a>
+            <a href="problema5.html">problema5 </a>
+            <a href="problema6.html">problema6 </a>
+            <a href="problema7.html">problema7 </a>
+            <a href="problema8.html">problema8 </a>
+            <a href="problema9.html">problema9 </a>
+            <a href="problema10.html">problema10 </a>
         </article>
         <aside>
-            <h3>es una barra lateral</h3>
+            <h3>es una barra lateral</h3> 
         </aside>
         <footer>
             <h4>Pie de la pagina</h4>
