--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
             <br>
             <a href="hobbies.html">hobbies</a>
             <br>
+            <a href="cronometro.html">cronometro</a>
+            <br>
             <h1>Problemas</h1>
             <a href="problema1.html">problema1 </a>
             <a href="problema2.html">problema2 </a>
