--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
             <br>
             <a href="cronometro.html">cronometro</a>
             <br>
+            <a href="algoritmia.html">algoritmia</a>
+            <br>
             <h1>Problemas</h1>
             <a href="problema1.html">problema1 </a>
             <a href="problema2.html">problema2 </a>
