--- a/algoritmia.html
+++ b/algoritmia.html
@@ -8,7 +8,7 @@
     <title>Problemas de algoritmia</title>
 </head>
 <body>
-    <div class="contianer">
+    <div class="container">
         <div class="problema-container">
             <h3 class="problema-title">Problema 1</h3>
             <h4>
@@ -21,7 +21,7 @@
             </div>
         </div>
     </div>
-    <div class="contianer">
+    <div class="container">
         <div class="problema-container">
             <h3 class="problema-title">Problema 2</h3>
             <h4>
@@ -73,7 +73,6 @@
                             </td>
                         </tr>
                     </tbody>
-                </thead>
                 </table>
                 <table class="problema-table" style="width: 40%;">
                     <thead>
@@ -114,14 +113,13 @@
                             </td>
                         </tr>
                     </tbody>
-                </thead>
                 </table>
                 <button type="button" class="problema-button" style="margin-top: 1rem;" onclick="problema2()">Invertir</button>
                 <pre class="problema-output" id="p2-output">Esperando respuesta ...</pre>
             </div>
         </div>
     </div>
-    <div class="contianer">
+    <div class="container">
         <div class="problema-container">
             <h3 class="problema-title">Problema 3</h3>
             <h4>
@@ -135,7 +133,7 @@
             </h4>
             <div class="problema-content">
                 <input type="text" class="problema-input" placeholder="Ingresa las palabras separadas por una coma" id="p3-input">
-                <button type="button" class="problema-button" style="margin-top: 1rem;" onclick="">Calcular</button>
+                <button type="button" class="problema-button" style="margin-top: 1rem;" onclick="problema3()">Calcular</button>
                 <pre class="problema-output" id="p3-output">Esperando respuesta ...</pre>
             </div>
         </div>
